@@ -129,7 +129,7 @@
         <checkstyle_unix.skip>true</checkstyle_unix.skip>
         <rat.skip>true</rat.skip>
         <jacoco.skip>true</jacoco.skip>
-        <revision>3.0.12-SNAPSHOT</revision>
+        <revision>3.1.1-SNAPSHOT</revision>
     </properties>
 
     <modules>
@@ -157,6 +157,8 @@
         <module>dubbo-spring-boot</module>
         <module>dubbo-native</module>
         <module>dubbo-test</module>
+        <module>dubbo-kubernetes</module>
+        <module>dubbo-xds</module>
         <module>dubbo-native-plugin</module>
     </modules>
 
@@ -326,10 +328,10 @@
                                         **/org/apache/dubbo/common/serialize/protobuf/support/wrapper/MapValue.java,
                                         **/org/apache/dubbo/common/serialize/protobuf/support/wrapper/ThrowablePB.java,
                                         **/org/apache/dubbo/triple/TripleWrapper.java,
-                                        **/istio/v1/auth/Ca.java,
-                                        **/istio/v1/auth/IstioCertificateServiceGrpc.java,
+                                        **/istio/v1/auth/**/*,
                                         **/com/google/rpc/*,
                                         **/generated/**/*,
+                                        **/generated-sources/**/*,
                                         **/grpc/health/**/*,
                                         **/grpc/reflection/**/*,
                                         **/target/**/*,
@@ -512,6 +514,7 @@
                             <forkMode>once</forkMode>
                             <argLine>${argline} ${jacocoArgLine}
                                 --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-opens java.base/java.math=ALL-UNNAMED
                                 --add-opens java.base/java.util=ALL-UNNAMED
                             </argLine>
                             <systemProperties>
